2012-03-26  Adrienne Walker  <enne@google.com>

        Allow expectations on directories in virtual test suites
        https://bugs.webkit.org/show_bug.cgi?id=82250

        Reviewed by Dirk Pranke.

        lookup_virtual_test_base was only returning valid results for files
        and not directories. Fix by falling back to the virtual test suite
        mapping if possible.

        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port.lookup_virtual_test_base):
        * Scripts/webkitpy/layout_tests/port/test.py:
        (TestPort.skipped_tests):
        (TestPort.virtual_test_suites):

2012-03-26  Dirk Pranke  <dpranke@chromium.org>

        Fix duplicated ChangeLog entry from r112171.

        Unreviewed, build fix.

2012-03-26  Dirk Pranke  <dpranke@chromium.org>

        nrwt: remove --worker-model flag
        https://bugs.webkit.org/show_bug.cgi?id=82112

        Reviewed by Adam Barth.

        The --worker-model=inline flag is basically redundant with the
        --child-processes=1 flag (technically, you could one run child
        process, but this is only useful for testing); this patch
        removes this flag, which simplifies things and enables more
        cleanup down the road.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager._run_tests):
        (Manager.print_config):
        * Scripts/webkitpy/layout_tests/controllers/manager_worker_broker.py:
        (get):
        * Scripts/webkitpy/layout_tests/controllers/manager_worker_broker_unittest.py:
        (make_broker):
        (FunctionTests.test_get__inline):
        (FunctionTests.test_get__processes):
        (_TestsMixin.setUp):
        (_TestsMixin.make_broker):
        (InlineBrokerTests.setUp):
        (MultiProcessBrokerTests.setUp):
        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port.default_child_processes):
        * Scripts/webkitpy/layout_tests/port/chromium_android.py:
        (ChromiumAndroidPort.check_sys_deps):